--- a/style.css
+++ b/style.css
@@ -61,11 +61,18 @@ h5 {
   font-size: 1em;
 }
 
+form.ul {
+  /* font-size: 18px; */
+  color: black;
+  list-style-image: url("/assets/images/pink_bullet.svg");
+  columns: 2;
+}
+
 ul {
   /* font-size: 18px; */
   color: white;
   list-style-image: url("/assets/images/pink_bullet.svg");
-  columns: 2;
+  columns: 1;
 }
 
 li {
@@ -604,7 +611,7 @@ li {
 }
 
 .ps-timeline-sec .container ol.ps-timeline {
-  margin: 390px 0;
+  margin: 16em 0;
   padding: 0;
   border-top: 5px solid rgb(57, 55, 77);
   list-style: none;
